# afri-nv

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  render.yaml
apps/api/: .dockerignore  Dockerfile  conftest.py  coverage.xml  manage.py  pyproject.toml  pytest.ini
apps/api/apps/: __init__.py
apps/api/apps/accounts/: __init__.py  admin.py  apps.py  models.py
apps/api/apps/agents/: admin.py  apps.py  models.py
apps/api/apps/ai_engine/: __init__.py  admin.py  apps.py  models.py
apps/api/apps/analytics/: admin.py  apps.py  models.py
apps/api/apps/assistant/: admin.py  apps.py  models.py
apps/api/apps/automations/: __init__.py  admin.py  apps.py  models.py
apps/api/apps/billing/: admin.py  apps.py  models.py
apps/api/apps/core/: __init__.py  admin.py  apps.py  models.py  permissions.py
apps/api/apps/crm/: admin.py  apps.py  models.py
apps/api/apps/dashboard/: admin.py  apps.py  models.py
apps/api/apps/developer/: admin.py  apps.py  authentication.py  models.py
apps/api/apps/documents/: admin.py  apps.py  models.py
apps/api/apps/knowledge/: admin.py  apps.py  models.py
apps/api/apps/marketing/: admin.py  apps.py  models.py
apps/api/apps/meetings/: admin.py  apps.py  models.py
apps/api/apps/organizations/: __init__.py  admin.py  apps.py  models.py
apps/api/apps/platform_admin/: admin.py  apps.py  models.py
apps/api/apps/reports/: admin.py  apps.py  models.py
apps/api/apps/security/: admin.py  apps.py  middleware.py  models.py
apps/api/apps/support/: admin.py  apps.py  models.py
apps/api/apps/workflows/: __init__.py  admin.py  apps.py  models.py
apps/api/config/: __init__.py  asgi.py  celery.py  wsgi.py
apps/api/config/settings/: __init__.py  base.py  development.py  production.py  test.py
apps/api/config/urls/: __init__.py  api_v1.py
apps/api/infrastructure/ai/: __init__.py  client.py  llm.py  quota.py
apps/api/infrastructure/cache/: __init__.py  redis.py
apps/api/infrastructure/celery/: tasks.py
apps/api/interfaces/: __init__.py
apps/api/requirements/: base.txt  development.txt  production.txt
apps/api/tests/: conftest.py
(+532 files in other folders)
