[project]
name = "novixa-api"
version = "0.1.0"
description = "Novixa AI Business Operating System — Django REST API"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "config", "infrastructure", "tests"]
exclude = [
  ".venv",
  "migrations",
  "__pycache__",
  ".git",
  "staticfiles",
  "media",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line length handled by formatter
  "B008",  # function calls in defaults (DRF/Django patterns)
  "RUF012",  # mutable class attrs (Django models/migrations)
  "N806",  # allow Model = get_user_model() style
  "UP046",  # keep Generic[T] style for broader Python compatibility
  "SIM105",  # try/except pass is fine in JWT blacklist path
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["ALL"]
"**/tests/**/*.py" = ["N802", "N803"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config", "infrastructure"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
  "migrations/",
  ".venv/",
  "tests/",
]

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "pgvector.*",
  "openai.*",
  "factory.*",
  "freezegun.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.coverage.run]
source = ["apps", "config", "infrastructure"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/management/commands/*",
  "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
